# israeli-savings-rates-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update_data.yml
analysis/: insights.md  queries.sql
excel/: savings_analysis.xlsx
pipeline/: export_excel.py  fetch.py  load.py  transform.py  validate.py
tests/: test_transform.py
