[project]
name = "israeli-savings-rates-dashboard-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "pytest>=7.0.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
